# KaGRiS

./: .gitignore  Cargo.toml  NOTES.md  README.md  TODO.md  config.json
kagris/: Cargo.toml
kagris/src/: main.rs
kgrs_audio/: Cargo.toml
kgrs_audio/src/: lib.rs  music.rs
kgrs_config/: Cargo.toml
kgrs_config/src/: lib.rs
kgrs_const/: Cargo.toml
kgrs_const/src/: color.rs  dimension.rs  lib.rs
kgrs_core/: Cargo.toml
kgrs_core/src/: board.rs  main.rs
kgrs_core/src/mino/: control.rs  mesh.rs  mod.rs  util.rs
kgrs_debug/: Cargo.toml
kgrs_debug/src/: debug_ui.rs  lib.rs  toggle_fullscreen.rs
kgrs_game/: Cargo.toml
kgrs_game/src/: board.rs  lib.rs
kgrs_game/src/mino/: control.rs  mod.rs  util.rs
kgrs_ui/: Cargo.toml
kgrs_ui/src/: debug.rs  lib.rs
kgrs_util/: Cargo.toml
kgrs_util/src/: function.rs  lib.rs
