[workspace]
members = [
    # Binary crate
    "kagris",

    # Libraries
    "kgrs_audio",
    "kgrs_config",
    "kgrs_const",
    "kgrs_debug",
    "kgrs_game",
    "kgrs_ui",
    "kgrs_util",
]
# For wgpu/Bevy
resolver = "2"

[workspace.package]
description = "Just a stacking game."
authors = ["Rinrin.rs <rinrin0413.valley@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/Rinrin0413/KaGRiS.git"
readme = "README"
edition = "2021"
