[package]
name = "kagris"
description.workspace = true
version = "0.1.0"
authors.workspace = true
license-file.workspace = true
repository = "https://github.com/Rinrin0413/KaGRiS/kagris/"
readme.workspace = true
edition.workspace = true

[dependencies]
kgrs_audio = {path = "../kgrs_audio"}
kgrs_config = {path = "../kgrs_config"}
kgrs_const = {path = "../kgrs_const"}
kgrs_debug = {path = "../kgrs_debug"}
kgrs_core = {path = "../kgrs_core"}
kgrs_ui = {path = "../kgrs_ui"}
bevy = "0.9"
colored = "2"
bevy_egui = "0.18"
bevy-inspector-egui = "0.15" # for Bevy 0.9
