[package]
name = "kgrs_config"
description = "Config manager for KaGRiS"
version = "0.1.0"
authors.workspace = true
license-file.workspace = true
repository = "https://github.com/Rinrin0413/KaGRiS/kgrs_config/"
readme.workspace = true
edition.workspace = true

[dependencies]
bevy = "0.9"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

