[package]
name = "kgrs_core"
description.workspace = true
version = "0.1.0"
authors.workspace = true
license-file.workspace = true
repository = "https://github.com/Rinrin0413/KaGRiS/kagris/"
readme.workspace = true
edition.workspace = true

[dependencies]
kgrs_audio = {path = "../kgrs_audio"}
kgrs_config = {path = "../kgrs_config"}
kgrs_const = {path = "../kgrs_const"}
kgrs_game = {path = "../kgrs_game"}
kgrs_ui = {path = "../kgrs_ui"}
bevy = "0.9"
bevy_egui = "0.18"
colored = "2"
# serde_json = "1.0"
# rogger = "*"
# chrono = "0.4"

# [dependencies.serde]
# version = "1.0"
# features = ["derive"]
