[package]
name = "kgrs_game"
description = "Game library for KaGRiS"
version = "0.1.0"
authors.workspace = true
license-file.workspace = true
repository = "https://github.com/Rinrin0413/KaGRiS/kgrs_game/"
readme.workspace = true
edition.workspace = true

[dependencies]
bevy = "0.9"
kgrs_config = {path = "../kgrs_config"}
kgrs_const = {path = "../kgrs_const"}
kgrs_util = {path = "../kgrs_util"}
rand = "0.8.5"
