[package]
name = "kgrs_ui"
description = "User Interface for KaGRiS"
version = "0.1.0"
authors.workspace = true
license-file.workspace = true
repository = "https://github.com/Rinrin0413/KaGRiS/kgrs_ui/"
readme.workspace = true
edition.workspace = true

[dependencies]
kgrs_config = { path = "../kgrs_config" }
bevy = "0.9"
bevy_egui = "0.18"
